--- a/src/app/tasklist/tasklist.component.css
+++ b/src/app/tasklist/tasklist.component.css
@@ -50,6 +50,7 @@ em {
     font-size: 1rem;
     height: 1.5em;
     overflow:hidden;
+    white-space: nowrap;
     text-overflow:ellipsis;
 }
 .status {
