--- a/src/app/tasklist/tasklist.component.html
+++ b/src/app/tasklist/tasklist.component.html
@@ -1,6 +1,6 @@
 <ul class="listview">
   <li class="listview-item" *ngFor="let item of items" >
-    <img class="icon" [src]="showicon(item.extname)" alt="icon" />
+    <img class="icon" [src]="showicon(item.extname, '')" alt="icon" />
     <div class="title">
       <em class="name">{{ item.name }}</em>
       <small class="status">{{ item.status }}</small>
