--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,14 +17,16 @@
     font-style: normal;
   }
   .box {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     width: 100%;
     height: 100%;
+    max-width: 720px;
     display: flex;
     overflow: hidden;
     flex-direction: column;
     align-items: center;
+    background-color: white;
   }
 
   .header {
